--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -10,7 +10,6 @@
 .project-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: calc(40em);
   gap: 2.5rem;
   margin: 3rem;
 }
